--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "ruff (>=0.13.2,<0.14.0)"
+    "ruff (>=0.13.2,<0.14.0)",
+    "pydantic (>=2.11.10,<3.0.0)"
 ]
 
 [dependency-groups]
