--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "mcp-serializer"
-version = "0.1.0"
-description = ""
+version = "1.0.0"
+description = "Register MCP features and serialize JSON-RPC requests into response data"
 authors = [
     {name = "Amir Ebrahim md.amire02@gmail.com"}
 ]
